bugfix FontSize onclick focus mismatches
bugfix Edit overflowing on small height

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
     #app {
         grid-template-columns: 1fr;
         /* grid-template-rows: auto 60vh 1fr 5rem; */
-        grid-template-rows: 10rem 60vh 1fr 10rem;
+        grid-template-rows: 10rem minmax(60vh, auto) 1fr 10rem;
         gap: 2rem 0;
         padding: 0 2rem;
     }
