--- a/src/components/Editor/Controls - FontSize.css
+++ b/src/components/Editor/Controls - FontSize.css
@@ -10,13 +10,11 @@
         "number number"
         "dec inc";
 
-    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 
     /* for border-radius to show properly */
     overflow: hidden;
     border-radius: var(--border-radius);
-
-    transition: box-shadow 50ms linear;
 }
 /* on 'hover' */
 .edit-top-font-size_class_1 {
@@ -28,8 +26,10 @@
 }
 #edit-top-font-size-labelSize {
     --margin-left-right: 1rem;
+    --padding-top-bottom: 0.5rem;
 
     margin: 0 var(--margin-left-right);
+    padding: var(--padding-top-bottom) 0;
 
     grid-area: labelSize;
     text-align: center;
@@ -53,9 +53,11 @@
     grid-area: dec;
     cursor: pointer;
     border: none;
+    border-right: medium solid white;
 }
 #edit-top-font-size-inc {
     grid-area: inc;
     cursor: pointer;
     border: none;
+    border-left: medium solid white;
 }
